Add RabbitMQ integration with message listener
Introduced RabbitMQ configuration and message listener components. Added RabbitMQ properties to application.properties, configured queue and message converter beans, and implemented a listener to process incoming messages. Updated main application to scan new config and listener packages.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=consumer-service
+
+
+server.port=8081
+
+
+# RabbitMQ Config
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.queue=my-queue
+spring.rabbitmq.exchange=my-exchange
+spring.rabbitmq.routingkey=my-routingkey
+
+spring.main.allow-bean-definition-overriding=true
+
+logging.level.org.springframework.amqp=DEBUG
